--- a/Tracker/Base.lproj/LaunchScreen.storyboard
+++ b/Tracker/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -25,7 +26,7 @@
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" name="Blue"/>
+                        <color key="backgroundColor" name="TrackerBlue"/>
                         <constraints>
                             <constraint firstItem="gon-PB-8Bg" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="DM4-al-tnR"/>
                             <constraint firstItem="gon-PB-8Bg" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="PjT-xK-Vxe"/>
@@ -39,7 +40,7 @@
     </scenes>
     <resources>
         <image name="launch_screen" width="91" height="94"/>
-        <namedColor name="Blue">
+        <namedColor name="TrackerBlue">
             <color red="0.21568627450980393" green="0.44705882352941179" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
